# ardana-dollar

./: .gitignore  .hlint.yaml  Makefile  README.md  ardana-dollar.cabal  cabal.project  ci.nix  costing-log.txt  default.nix  endpoint-spec.md  flake.nix  release.nix  shell.nix  stack.yaml  utxo-design.md
.devcontainer/: devcontainer.json
.github/: check_costing.sh  check_formatting.sh
.github/workflows/: test.yml
benchmarking/: Main.hs
benchmarks/: vault-1-unapplied.flat  vault-2-unapplied.flat
costing/: Main.hs
costing-output/: costing-log.txt  vault-3-unapplied.flat
docs/: account-effects.md  roadmap.md  utxo-design.md
docs/diagrams/: depositCollateral.dot  mintDUSD.dot  repayDUSD.dot  withdrawCollateral.dot
docs/diagrams/PriceOracle/: PriceUpdate.dot
docs/diagrams/Vault/: AddBorrowAct.dot  AddCollateralAct.dot  LiquidationCallAct.dot  RemoveCollateralAct.dot  RepayBorrowAct.dot
docs/markdown/: Certification.md
docs/utxo-design/: admin-sm.md  conventions.md  cost-center.md  debt-auction-bid.md  oracle-utxo.md  surplus-auction-bid.md  treasury-sm.md  vault-sm.md
examples/src/Plutus/Contracts/: Game.hs
examples/test/: Spec.hs
examples/test/Spec/: Game.hs
nix/: README.md  ci.nix  costing.nix  default.nix  haskell.nix  sources.json
nix/lib/: ci.nix
nix/pkgs/: default.nix
nix/pkgs/haskell/: default.nix  haskell.nix
pab/: Main.hs
src/: MyModule.hs
src/ArdanaDollar/: MockAdmin.hs  Trace.hs  Types.hs  Utils.hs  Vault.hs
src/ArdanaDollar/Buffer/: Endpoints.hs  OffChain.hs  OnChain.hs  Types.hs
src/ArdanaDollar/Certification/: OnChain.hs  Types.hs
src/ArdanaDollar/DanaStakePool/: Contracts.hs  DanaCurrency.hs  Endpoints.hs  Types.hs  Utils.hs  Validators.hs  ValidatorsTH.hs
src/ArdanaDollar/ExponentialMint/: OnChain.hs  Types.hs
src/ArdanaDollar/Map/: ContractUtils.hs  Contracts.hs  Endpoints.hs  ListOpContracts.hs  MapTerms.hs  NodeValidPolicy.hs  README.md  SnapshotOpContracts.hs  SnapshotPolicy.hs  TestUtils.hs  TxUtils.hs  Types.hs  UnlockPermPolicy.hs  UnlockPolicy.hs  UseContracts.hs  Utils.hs  Validator.hs  Validators.hs  ValidatorsTH.hs
src/ArdanaDollar/PriceOracle/: OnChain.hs  Types.hs
src/ArdanaDollar/Treasury/: CanSpendToken.hs  Endpoints.hs  OffChain.hs  OnChain.hs  StateToken.hs  Types.hs  UpgradeContractToken.hs
test/: Main.hs  TastyDefaultMain.hs
test/Proper/: Plutus.hs
test/Test/: AssertUtils.hs  TraceUtils.hs
test/Test/ArdanaDollar/: BufferAuctionTraceTest.hs  DanaStakePoolTest.hs  Endpoints.hs  MapTest.hs  TreasuryPrerun.hs  TreasuryTraceTest.hs  TreasuryValidatorTest.hs  Utils.hs  ValidatorsTH.hs  VaultValidatorTest.hs
test/Test/ArdanaDollar/Certification/OnChain/Model/: Proper.hs
test/Test/ArdanaDollar/ExponentialMint/OnChain/Model/: Proper.hs
test/Test/ArdanaDollar/PriceOracle/: ValidatorTest.hs
test/Test/ArdanaDollar/PriceOracle/OnChain/: Test.hs
test/Test/ArdanaDollar/PriceOracle/OnChain/Model/: Checker.hs  Constraints.hs  Exploration.hs  Gen.hs  Parameters.hs  Proper.hs  Reflections.hs  Reification.hs  Space.hs  Test.hs
test/Test/ContractModel/: Buffer.hs  Vault.hs
test/Test/Data/StickBreakingSet/: Mock.hs
test/Test/Roundtrips/: BuiltinData.hs  JSON.hs
test/Wallet/Emulator/Stream/: Extra.hs
util/: Sizes.hs
utxo-design/: admin-sm.md  conventions.md  cost-center.md  dusd-mp.md  dusd-permission-mp.md  oracle-utxo.md  treasury-sm.md  v1.md  vault-sm.md
