cabal-version: 2.4
name:          ardana-dollar
version:       0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license:       Apache-2.0
license-files: LICENSE
author:        Your name
maintainer:    Your email

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

common lang
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-export-lists -Werror -Wincomplete-record-updates
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -fobject-code -fno-strictness -fplugin=RecordDotPreprocessor

common deps
  build-depends:
    , aeson
    , base                     >=4.9 && <5
    , bytestring
    , containers
    , data-default
    , freer-extras
    , playground-common
    , plutus-contract
    , plutus-core
    , plutus-ledger
    , plutus-tx
    , plutus-tx-plugin
    , plutus-use-cases
    , record-dot-preprocessor
    , record-hasfield
    , row-types
    , text

common test-deps
  import:        deps
  build-depends:
    , tasty
    , tasty-hunit

library
  import:          lang
  import:          deps
  exposed-modules:
    ArdanaDollar.Trace
    ArdanaDollar.Types
    ArdanaDollar.Utils
    ArdanaDollar.Vault
    MyModule
    Plutus.Contracts.Game

  hs-source-dirs:  src examples/src

test-suite ardana-dollar-test
  import:         lang
  import:         deps
  import:         test-deps
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:  Test.ArdanaDollar.Utils
  hs-source-dirs: test
  ghc-options:    -Wnoncanonical-monad-instances -Widentities -rtsopts
  build-depends:  ardana-dollar

executable ardana-pab
  import:         lang
  import:         deps
  main-is:        Main.hs
  hs-source-dirs: pab
  ghc-options:    -threaded
  build-depends:
    , ardana-dollar
    , data-default
    , freer-simple
    , plutus-extra
    , plutus-ledger-api
    , plutus-pab
    , prettyprinter
