Cabal-version: 2.4
name:          ardana-dollar
version:       0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license: NONE
license-files: LICENSE
author:        Your name
maintainer:    Your email

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

common lang
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-export-lists -Werror -Wincomplete-record-updates
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -fobject-code -fno-strictness -fplugin=RecordDotPreprocessor
    -fwarn-redundant-constraints -fwarn-incomplete-uni-patterns
    -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-identities

common deps
  build-depends:
    , aeson
    , base                     >=4.9 && <5
    , bytestring
    , containers
    , data-default
    , freer-extras
    , lens
    , mtl
    , openapi3
    , playground-common
    , plutus-contract
    , plutus-core
    , plutus-extra
    , plutus-ledger
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , plutus-use-cases
    , record-dot-preprocessor
    , record-hasfield
    , row-types
    , text
    , vector

common test-deps
  import:        deps
  build-depends:
    , freer-simple
    , hedgehog
    , lens
    , optparse-applicative  ^>=0.16
    , QuickCheck
    , silently
    , streaming
    , tagged
    , tasty
    , tasty-hedgehog
    , tasty-hunit
    , tasty-plutus
    , tasty-quickcheck
    , safe
    , transformers
    , pretty
    , pretty-show
    , minisat-solver

library
  import:          lang
  import:          deps
  exposed-modules:
    ArdanaDollar.Buffer.Endpoints
    ArdanaDollar.Buffer.OffChain
    ArdanaDollar.Buffer.OnChain
    ArdanaDollar.Buffer.Types
    ArdanaDollar.DanaStakePool.Contracts
    ArdanaDollar.DanaStakePool.DanaCurrency
    ArdanaDollar.DanaStakePool.Endpoints
    ArdanaDollar.DanaStakePool.Types
    ArdanaDollar.DanaStakePool.Utils
    ArdanaDollar.DanaStakePool.Validators
    ArdanaDollar.DanaStakePool.ValidatorsTH
    ArdanaDollar.MockAdmin
    ArdanaDollar.PriceOracle.Types
    ArdanaDollar.PriceOracle.OnChain
    ArdanaDollar.Trace
    ArdanaDollar.Treasury.Endpoints
    ArdanaDollar.Treasury.OffChain
    ArdanaDollar.Treasury.OnChain
    ArdanaDollar.Treasury.StateToken
    ArdanaDollar.Treasury.Types
    ArdanaDollar.Treasury.UpgradeContractToken
    ArdanaDollar.Types
    ArdanaDollar.Utils
    ArdanaDollar.Vault

  hs-source-dirs:  src

test-suite ardana-dollar-test
  import:         lang
  import:         deps
  import:         test-deps
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    Hedgehog.Gen.ArdanaDollar
    Hedgehog.Gen.Extra
    Hedgehog.Gen.Plutus
    Proper.Plutus
    TastyDefaultMain
    Test.ArdanaDollar.BufferAuctionTraceTest
    Test.ArdanaDollar.DanaStakePoolTest
    Test.ArdanaDollar.PriceOracle.OnChain.Model.Proper
    Test.ArdanaDollar.TreasuryPrerun
    Test.ArdanaDollar.TreasuryTraceTest
    Test.ArdanaDollar.TreasuryValidatorTest
    Test.ArdanaDollar.Utils
    Test.AssertUtils
    Test.ContractModel.Buffer
    Test.ContractModel.Vault
    Test.Roundtrips.BuiltinData
    Test.Roundtrips.JSON
    Test.TraceUtils
    Wallet.Emulator.Stream.Extra

  hs-source-dirs: test
  ghc-options:    -Wnoncanonical-monad-instances -Widentities -rtsopts -O1
  build-depends:  ardana-dollar

executable ardana-pab
  import:         lang
  import:         deps
  main-is:        Main.hs
  hs-source-dirs: pab
  ghc-options:    -threaded
  build-depends:
    , ardana-dollar
    , data-default
    , freer-simple
    , openapi3
    , plutus-extra
    , plutus-ledger-api
    , plutus-pab
    , prettyprinter
